Changes in trunk
================

New features added
------------------

* ``tocdepth`` can be given as a file-wide metadata entry, and
  specifies the maximum depth of a TOC of this file.

* HTML output:

  - The "previous" and "next" links have a more logical structure, so
    that by following "next" links you can traverse the entire TOC
    tree.

  - The new event `html-page-context` can be used to include custom
    values into the context used when rendering an HTML template.

  - Document metadata is now in the default template context, under
    the name `metadata`.

  - The new config value `html_favicon` can be used to set a favicon
    for the HTML output.  Thanks to Sebastian Wiesner.

  - The new config value `html_use_index` can be used to switch index
    generation in HTML documents off.

  - The new config value `html_split_index` can be used to create
    separate index pages for each letter, to be used when the complete
    index is too large for one page.

  - The new config value `html_short_title` can be used to set a
    shorter title for the documentation which is then used in the
    navigation bar.

  - The new config value `html_show_sphinx` can be used to control
    whether a link to Sphinx is added to the HTML footer.

  - The new config value `html_file_suffix` can be used to set the
    HTML file suffix to e.g. ``.xhtml``.

  - The directories in the `html_static_path` can now contain
    subdirectories.

* The image directive now supports specifying the extension as ``.*``,
  which makes the builder select the one that matches best.

* The new config value `exclude_trees` can be used to exclude whole
  subtrees from the search for source files.  Thanks to Sebastian
  Wiesner.

* Defaults for configuration values can now be callables, which allows
  dynamic defaults.

* The new TextBuilder creates plain-text output.

* Extensions:
    
  - The `autodoc` extension accepts signatures for functions, methods