@@ -36,6 +36,7 @@ class Config(object):
         unused_docs = ([], True),
         exclude_dirs = ([], True),
         exclude_trees = ([], True),
+        default_role = (None, True),
         add_function_parentheses = (True, True),
         add_module_names = (True, True),
         show_authors = (False, True),
